Ensure list does not collapse with long service name

--- a/src/styles/components/deployments-table.less
+++ b/src/styles/components/deployments-table.less
@@ -22,6 +22,7 @@
 
   .deployment-service-icon {
     margin: 0 8px;
+    flex-shrink: 0;
   }
 
   .deployment-service-name {
