--- a/src/styles/components/tree-list.less
+++ b/src/styles/components/tree-list.less
@@ -10,6 +10,7 @@
       content: '';
       display: inline-block;
       align-self: flex-start;
+      flex-shrink: 0;
 
       margin: 0 0 12px;
       width: 20px;
